--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,7 @@
 
-<h1> <%= search_result.count_house_members%> Order Members </h1>
+<h1> <%= search_result.count_order_members%> Order Members </h1>
 
-    <% search_result.house_members.each do |member| %>
+    <% search_result.order_members.each do |member| %>
 <section class="order">
       <p class="name"><%=member.name %></p>
       <p class="role"><%=member.role if member.role != nil %></p>
